--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -147,11 +147,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Ellipes.h" />
+    <ClInclude Include="GeometricElement.h" />
+    <ClInclude Include="Library.h" />
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="Path.h" />
+    <ClInclude Include="Polyline.h" />
+    <ClInclude Include="SVGPoint.h" />
+    <ClInclude Include="Polygon.h" />
     <ClInclude Include="rapidxml.hpp" />
+    <ClInclude Include="Rect.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SVGDemo.h" />
+    <ClInclude Include="SVGElement.h" />
+    <ClInclude Include="SVGRoot.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TextElement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -161,6 +174,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="SVGDemo.cpp" />
+    <ClCompile Include="SVGElement.cpp" />
+    <ClCompile Include="SVGRoot.cpp" />
+    <ClCompile Include="TestMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SVGDemo.rc" />
