--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -186,6 +186,7 @@
     <ClCompile Include="SVGPoint.cpp" />
     <ClCompile Include="SVGRoot.cpp" />
     <ClCompile Include="TestMain.cpp" />
+    <ClCompile Include="TextElement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SVGDemo.rc" />
