--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -148,12 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="Color.h" />
     <ClInclude Include="Ellipes.h" />
     <ClInclude Include="GeometricElement.h" />
     <ClInclude Include="Library.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Path.h" />
     <ClInclude Include="Polyline.h" />
+    <ClInclude Include="Stroke.h" />
     <ClInclude Include="SVGPoint.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="rapidxml.hpp" />
@@ -168,6 +170,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Color.cpp" />
     <ClCompile Include="Ellipes.cpp" />
     <ClCompile Include="GeometricElement.cpp" />
     <ClCompile Include="Line.cpp" />
