--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
@@ -144,6 +144,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="sample.svg" />
-    <None Include="..\..\..\..\..\..\..\Dowloads\Test.svg" />
+    <None Include="Test1.svg" />
+    <None Include="Test2.svg" />
+    <None Include="Test3.svg" />
   </ItemGroup>
 </Project>
