Build SVGGroup.h and SVGPath.h

--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Path.h" />
     <ClInclude Include="Polyline.h" />
     <ClInclude Include="Stroke.h" />
+    <ClInclude Include="SVGGroup.h" />
     <ClInclude Include="SVGPoint.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="rapidxml.hpp" />
