Build SVGGroup.cpp and add argument for parseNode() in SVGRoot

--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClCompile Include="Stroke.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SVGGroup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SVGDemo.rc">
