--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="Stroke.cpp" />
     <ClCompile Include="SVGDemo.cpp" />
     <ClCompile Include="SVGElement.cpp" />
+    <ClCompile Include="SVGGroup.cpp" />
     <ClCompile Include="SVGPoint.cpp" />
     <ClCompile Include="SVGRoot.cpp" />
     <ClCompile Include="TestMain.cpp" />
