--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -206,6 +206,7 @@
     <None Include="Test1.svg" />
     <None Include="Test2.svg" />
     <None Include="Test3.svg" />
+    <None Include="Test4.svg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
