--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
@@ -153,5 +153,6 @@
     <None Include="Test1.svg" />
     <None Include="Test2.svg" />
     <None Include="Test3.svg" />
+    <None Include="Test4.svg" />
   </ItemGroup>
 </Project>
