--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -207,6 +207,24 @@
     <None Include="Test2.svg" />
     <None Include="Test3.svg" />
     <None Include="Test4.svg" />
+    <None Include="TestCases\svg-01.svg" />
+    <None Include="TestCases\svg-02.svg" />
+    <None Include="TestCases\svg-03.svg" />
+    <None Include="TestCases\svg-04.svg" />
+    <None Include="TestCases\svg-05.svg" />
+    <None Include="TestCases\svg-06.svg" />
+    <None Include="TestCases\svg-07.svg" />
+    <None Include="TestCases\svg-08.svg" />
+    <None Include="TestCases\svg-09.svg" />
+    <None Include="TestCases\svg-10.svg" />
+    <None Include="TestCases\svg-11.svg" />
+    <None Include="TestCases\svg-12.svg" />
+    <None Include="TestCases\svg-13.svg" />
+    <None Include="TestCases\svg-14.svg" />
+    <None Include="TestCases\svg-15.svg" />
+    <None Include="TestCases\svg-16.svg" />
+    <None Include="TestCases\svg-17.svg" />
+    <None Include="TestCases\svg-18.svg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
