--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj.filters
@@ -78,6 +78,15 @@
     <ClInclude Include="SVGGroup.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SVGStop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SVGGradient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SVGLinearGradient.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -132,6 +141,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SVGGroup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SVGStop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SVGGradient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SVGLinearGradient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
