--- a/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
+++ b/SVG_DEMO/SVG Source Code/SVGDemo.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SVGDemo.h" />
     <ClInclude Include="SVGElement.h" />
+    <ClInclude Include="SVGRadialGradient.h" />
     <ClInclude Include="SVGRoot.h" />
     <ClInclude Include="SVGStop.h" />
     <ClInclude Include="targetver.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="SVGGroup.cpp" />
     <ClCompile Include="SVGLinearGradient.cpp" />
     <ClCompile Include="SVGPoint.cpp" />
+    <ClCompile Include="SVGRadialGradient.cpp" />
     <ClCompile Include="SVGRoot.cpp" />
     <ClCompile Include="SVGStop.cpp" />
     <ClCompile Include="TextElement.cpp" />
